compiler/acton/test/syntaxerrors/err27.act
# Invalid numeric literal
def bad_number():
    return 123abc